[gd_scene load_steps=24 format=2]

[ext_resource path="res://MiscSFX.gd" type="Script" id=1]
[ext_resource path="res://MSFXRng.gd" type="Script" id=2]
[ext_resource path="res://sfx/pickup/pickup.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/pickup/pickdown.wav" type="AudioStream" id=4]
[ext_resource path="res://reaper/sprocket_collect.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/ui/button.wav" type="AudioStream" id=6]
[ext_resource path="res://reaper/red_talk.wav" type="AudioStream" id=7]
[ext_resource path="res://reaper/yellow_talk.wav" type="AudioStream" id=8]
[ext_resource path="res://reaper/blue_talk.wav" type="AudioStream" id=9]
[ext_resource path="res://reaper/clam_talk.wav" type="AudioStream" id=10]
[ext_resource path="res://reaper/sprocket_fanfare.wav" type="AudioStream" id=11]
[ext_resource path="res://reaper/sprocket_upfare.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/drill/rock_break.wav" type="AudioStream" id=13]
[ext_resource path="res://reaper/gem_upfare.wav" type="AudioStream" id=14]
[ext_resource path="res://reaper/button_on.wav" type="AudioStream" id=15]
[ext_resource path="res://reaper/button_off.wav" type="AudioStream" id=16]
[ext_resource path="res://sfx/plant/break.wav" type="AudioStream" id=17]
[ext_resource path="res://reaper/race_1.wav" type="AudioStream" id=18]
[ext_resource path="res://reaper/race_3.wav" type="AudioStream" id=19]
[ext_resource path="res://reaper/race_2.wav" type="AudioStream" id=20]
[ext_resource path="res://reaper/race_4.wav" type="AudioStream" id=21]
[ext_resource path="res://sfx/ball/applause.wav" type="AudioStream" id=22]
[ext_resource path="res://reaper/music3.ogg" type="AudioStream" id=23]

[node name="MiscSFX" type="Node"]
script = ExtResource( 1 )

[node name="GemPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="GemPickdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="SprocketCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="UIButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="RedTalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="BlueTalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="YellowTalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="ClamTalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 6.0
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="SprocketFanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -2.0
bus = "SFXMusic"
script = ExtResource( 2 )

[node name="SprocketUpfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -2.0
bus = "SFXMusic"
script = ExtResource( 2 )

[node name="GemUpfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -5.0
bus = "SFXMusic"
script = ExtResource( 2 )

[node name="RockBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="ButtonOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="ButtonOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="PlantBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="Race1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="Race2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="Race3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="Race4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="Applause" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
bus = "SFXNonSpatial"
script = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
bus = "MusicFX"
