extends Node

onready var gem_pickup = $GemPickup
onready var gem_pickdown = $GemPickdown
onready var sprocket_collect = $SprocketCollect
onready var ui_button = $UIButton

onready var red_talk = $RedTalk
onready var blue_talk = $BlueTalk
onready var yellow_talk = $YellowTalk
onready var clam_talk = $ClamTalk

onready var sprocket_fanfare = $SprocketFanfare
onready var sprocket_upfare = $SprocketUpfare

onready var gem_upfare = $GemUpfare

onready var rock_break = $RockBreak

onready var button_on = $ButtonOn
onready var button_off = $ButtonOff

onready var plant_break = $PlantBreak

onready var race_1 = $Race1
onready var race_2 = $Race2
onready var race_3 = $Race3
onready var race_4 = $Race4

onready var applause = $Applause

onready var music = $Music
